<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="center"
      android:src="@drawable/sweets"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="16dp">
  </ImageView>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sweety"
      android:fontFamily="@font/leckerli_one"
      android:textAlignment="center"
      android:textColor="@color/purple_700"
      android:textSize="70dp"
      android:textStyle="bold|italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.150"
      android:id="@+id/text4"
      ></TextView>
  <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="248dp"
      android:backgroundTint="#CCCCCC"
      android:drawableLeft="@drawable/baseline_account_circle_24"
      android:drawablePadding="13dp"
      android:hint="@string/ad_soyad"
      android:textColorHint="#8B008B"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent=".8" />
  <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="316dp"
      android:backgroundTint="#CCCCCC"
      android:drawableLeft="@drawable/baseline_email_24"
      android:drawablePadding="13dp"
      android:hint="@string/email"
      android:textColorHint="#8B008B"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent=".8">
  </EditText>
  <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="380dp"
      android:backgroundTint="#CCCCCC"
      android:drawableLeft="@drawable/baseline_key_24"
      android:drawablePadding="13dp"
      android:hint="@string/parola"
      android:textColorHint="#8B008B"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent=".8">
  </EditText>
  <Button
      android:id="@+id/button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="136dp"
      android:background="@drawable/btn_bg_design"
      android:onClick="mainActivity"
      android:text="Kayıt ol"
      android:textAllCaps="false"
      android:textSize="20dp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.56"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintWidth_percent=".7">
  </Button>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="636dp"
      android:text="@string/zaten_bir_hesab_n_var_m"
      android:textAlignment="center"
      android:textColor="#8B008B"
      android:textSize="17dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.316"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">
  </TextView>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="636dp"
      android:text="@string/sign_in"
      android:textAlignment="center"
      android:textColor="@color/purple_700"
      android:textSize="17dp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.813"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:onClick="login">
  </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>